# clearmemory

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yml  release.yml
assets/: README.md
assets/integration/: electron-icon-setup.js
benchmarks/: README.md  latency_bench.rs  retrieval_bench.rs
clearmemory-assets/: README.md
clearmemory-assets/components/: LogoComponents.jsx  brand-tokens.js  head-snippet.html
docs/: ENTERPRISE.md  README.md  architecture.md  benchmarks.md  security.md
examples/: README.md
examples/01-getting-started/: README.md  run.sh
examples/02-importing-history/: README.md  run.sh
examples/03-claude-code-sessions/: README.md  run.sh
examples/04-http-api/: README.md  run.sh
examples/05-mcp-integration/: README.md  run.sh
migrations/: 001_initial_schema.sql  002_fts5_index.sql  README.md
src/: README.md  config.rs  lib.rs  main.rs
src/audit/: README.md  chain.rs  export.rs  logger.rs  mod.rs
src/backup/: README.md  mod.rs  restore.rs  scheduler.rs  snapshot.rs
src/compliance/: README.md  classification.rs  legal_hold.rs  mod.rs  purge.rs  reporting.rs
src/context/: README.md  compiler.rs  dedup.rs  layers.rs  mod.rs
src/curator/: README.md  qwen.rs
src/engine/: README.md  mod.rs
src/entities/: README.md  aliases.rs  graph.rs  mod.rs  resolver.rs
src/facts/: README.md  conflict.rs  extractor.rs  mod.rs  temporal.rs
src/import/: README.md  chatgpt.rs  claude_code.rs  clear_format.rs  converter.rs  copilot.rs  markdown.rs  mod.rs  slack.rs
src/migration/: README.md  mod.rs  reindex.rs  runner.rs  versioning.rs
src/observability/: README.md  health.rs  metrics.rs  mod.rs  tracing_setup.rs
src/reflect/: README.md  mental_models.rs  mod.rs  synthesizer.rs
src/repair/: README.md  integrity.rs  mod.rs  rebuild.rs
src/retention/: README.md  archiver.rs  mod.rs  size_policy.rs  (+2 more)
tests/: README.md  benchmark_llm_judge.rs  benchmark_locomo.rs  benchmark_longmemeval.rs  benchmark_longmemeval_official.rs  benchmark_multiaxis.rs  benchmark_rigor.rs  benchmark_scale.rs  benchmark_semantic_purity.rs  benchmark_suite.rs  per_strategy_bench.rs  retrieval_regression.rs
(+50 files in other folders)
